--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                 background-color: rgb(0, 0, 0);
                 color: rgb(255, 255, 255);
             }
+
+            #insta{
+                width: 40px;
+            }
+            #insta:hover{
+                width:41px;
+            }
         </style>
 
     </head>
@@ -283,7 +290,7 @@
         <div class="icons">
             <ul>
                 <li><a href="https://github.com/CodeBytes21"><img src="github.png" alt="" width="30px"></a></li>
-                <li><a href="https://www.instagram.com/moiz_patra"><img src="instagram.png" alt="" width="30px"></a></li>
+                <li><a href="https://www.instagram.com/moiz_patra"><img src="SVG/insta.svg" alt="" id="insta"></a></li>
                 <li><img src="linkedin.png" alt="" width="30px"></li>
             </ul>
         </div>
