--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 color: rgb(255, 255, 255);
             }
 
-            #insta{
+            #insta, #github{
                 width: 40px;
             }
-            #insta:hover{
+            #insta:hover, #github:hover{
                 width:41px;
             }
         </style>
@@ -289,7 +289,7 @@
         
         <div class="icons">
             <ul>
-                <li><a href="https://github.com/CodeBytes21"><img src="github.png" alt="" width="30px"></a></li>
+                <li><a href="https://github.com/CodeBytes21"><img src="SVG/github.svg" alt="" id="github"></a></li>
                 <li><a href="https://www.instagram.com/moiz_patra"><img src="SVG/insta.svg" alt="" id="insta"></a></li>
                 <li><img src="linkedin.png" alt="" width="30px"></li>
             </ul>
