--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 color: rgb(255, 255, 255);
             }
 
-            #insta, #github{
+            #insta, #github, #linkdin{
                 width: 40px;
             }
-            #insta:hover, #github:hover{
+            #insta:hover, #github:hover, #linkdin:hover{
                 width:41px;
             }
         </style>
@@ -291,7 +291,7 @@
             <ul>
                 <li><a href="https://github.com/CodeBytes21"><img src="SVG/github.svg" alt="" id="github"></a></li>
                 <li><a href="https://www.instagram.com/moiz_patra"><img src="SVG/insta.svg" alt="" id="insta"></a></li>
-                <li><img src="linkedin.png" alt="" width="30px"></li>
+                <li><img src="SVG/linkdin.svg" alt="" width="30px" id="linkdin"></li>
             </ul>
         </div>
 
