--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 color: rgb(255, 255, 255);
             }
 
-            #insta, #github{
+            #insta, #github, #linkdin{
                 width: 40px;
             }
-            #insta:hover, #github:hover{
+            #insta:hover, #github:hover, #linkdin:hover{
                 width:41px;
             }
         </style>
