--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <ul>
                 <li><a href="https://github.com/CodeBytes21"><img src="SVG/github.svg" alt="" id="github"></a></li>
                 <li><a href="https://www.instagram.com/moiz_patra"><img src="SVG/insta.svg" alt="" id="insta"></a></li>
-                <li><img src="SVG/linkdin.svg" alt="" width="30px" id="linkdin"></li>
+                <li><a href="https://www.linkedin.com/feed/"><img src="SVG/linkdin.svg" alt="" width="30px" id="linkdin"></a></li>
             </ul>
         </div>
 
